# open-here

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  flake.nix
src/: cli.rs  client.rs  cmd.rs  lib.rs  main.rs  server.rs
tests/: open_check.rs
