[package]
name = "open-here"
version = "0.1.0"
authors = ["herwig@herwigstuetz.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
tracing = { version = "0.1.23", features = [ "log" ] }
env_logger = "0.8.3"
actix-web = "3.3.2"
serde = { version = "1", features = ["derive"]}
