[package]
name = "open-here"
version = "0.1.0"
authors = ["herwig@herwigstuetz.com"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "open-here"

[dependencies]
structopt = "0.3.21"
tracing = { version = "0.1.23", features = [ "log" ] }
env_logger = "0.8.3"
actix-web = "3.3.2"
serde = { version = "1", features = ["derive"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
envconfig = "0.9.1"
tempfile = "3"